--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "build": "gitbook build",
-    "prepublish": "npm run build",
-    "publish": "git subtree push --prefix=_book origin gh-pages"
+    "publish": "./scripts/publish-gitbook.sh"
   },
   
   "devDependencies": {
