--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "build": "gitbook build",
+    "prepublish": "npm run build",
     "publish": "./scripts/publish-gitbook.sh"
   },
-  
   "devDependencies": {
-    "gitbook-cli":"^2.3.2"
+    "gitbook-cli": "^2.3.2"
   }
 }
